feat: add repository management
